--- a/gb/19/12/31/n11757836.md
+++ b/gb/19/12/31/n11757836.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xfzpul3051/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xfzpul3051/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xfzpul3051/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xfzpul3051/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xfzpul3051/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xfzpul3051/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xfzpul3051/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xfzpul3051/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xfzpul3051/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xfzpul3051/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xfzpul3051/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xfzpul3051/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xfzpul3051/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xfzpul3051/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xfzpul3051/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xfzpul3051/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xfzpul3051/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xfzpul3051/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xfzpul3051/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xfzpul3051/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xfzpul3051/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xfzpul3051/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xfzpul3051/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xfzpul3051/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xfzpul3051/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xfzpul3051/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xfzpul3051/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xfzpul3051/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xfzpul3051/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xfzpul3051/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xfzpul3051/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xfzpul3051/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xfzpul3051/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xfzpul3051/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xfzpul3051/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xfzpul3051/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xfzpul3051/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xfzpul3051/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xfzpul3051/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xfzpul3051/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xfzpul3051/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xfzpul3051/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xfzpul3051/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xfzpul3051/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xfzpul3051/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xfzpul3051/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xfzpul3051/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>项目经理：神韵演出美妙绝伦 无可挑剔</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/12/191231021950100055-600x400.jpg" />
 <h6>2019年12月30日晚上，应用材料公司项目经理Fred Butt和太太一起观看神韵环球艺术团在加州旧金山歌剧院(War Memorial Opera House)的首场演出。（林家维／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2019年12月31日讯】（大纪元记者林家维美国旧金山报导）12月30日晚上，<ahref="https://github.com/xfzpul3051/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>环球艺术团在加州<ahref="https://github.com/xfzpul3051/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1%E6%AD%8C%E5%89%A7%E9%99%A2.md#1">旧金山歌剧院</a>(War Memorial Opera House)进行首场演出。在全球最大的半导体设备和服物供应商的应用材料公司担任项目经理的Fred Butt，和太太Donna一起来欣赏演出。</p>
-<p>Butt夫妇是首次观看<ahref="https://github.com/xfzpul3051/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>演出，Butt先生表示，“非常有意思，我喜欢神韵艺术家们用舞蹈来讲故事，真是美妙绝伦。每个舞蹈演员的动作都精准到位，时间的把握无可挑剔。舞蹈和现场管弦乐团，都完美地结合在一起，精彩至极。”</p>
+	<p>【大纪元2019年12月31日讯】（大纪元记者林家维美国旧金山报导）12月30日晚上，<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>环球艺术团在加州<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1%E6%AD%8C%E5%89%A7%E9%99%A2.md#1">旧金山歌剧院</a>(War Memorial Opera House)进行首场演出。在全球最大的半导体设备和服物供应商的应用材料公司担任项目经理的Fred Butt，和太太Donna一起来欣赏演出。</p>
+<p>Butt夫妇是首次观看<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>演出，Butt先生表示，“非常有意思，我喜欢神韵艺术家们用舞蹈来讲故事，真是美妙绝伦。每个舞蹈演员的动作都精准到位，时间的把握无可挑剔。舞蹈和现场管弦乐团，都完美地结合在一起，精彩至极。”</p>
 <p>太太Donna是一名护理教育者，她表示翘首期盼了五年，今天终于如愿以偿来观看，对神韵舞蹈家们精彩的演出，她表示还没欣赏够。她说，“舞台色彩亮丽鲜明，颜色和服装让我目不暇接。舞蹈演员们的演出震撼人心，他们真是杰出超凡，太励志了。”</p>
-<p>Donna赞佩神韵所展现的神性与<ahref="https://github.com/xfzpul3051/djy/blob/master/gb/tag/%E7%B2%BE%E7%A5%9E%E5%86%85%E6%B6%B5.md#1">精神内涵</a>启迪人心，当提到演出中最令人触动的时刻，她眼睛含泪的说，“当我了解第一个节目的内涵，<ahref="https://github.com/xfzpul3051/djy/blob/master/gb/tag/%E5%88%9B%E4%B8%96%E4%B8%BB.md#1">创世主</a>如何在天国率领众神来到人间。然后，当看到创世主从天上下来的那一幕，非常震撼。是的，我感受到了，这深深触动了我，与我产生共鸣。”</p>
+<p>Donna赞佩神韵所展现的神性与<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%B2%BE%E7%A5%9E%E5%86%85%E6%B6%B5.md#1">精神内涵</a>启迪人心，当提到演出中最令人触动的时刻，她眼睛含泪的说，“当我了解第一个节目的内涵，<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%88%9B%E4%B8%96%E4%B8%BB.md#1">创世主</a>如何在天国率领众神来到人间。然后，当看到创世主从天上下来的那一幕，非常震撼。是的，我感受到了，这深深触动了我，与我产生共鸣。”</p>
 <p>Butt夫妇表示，神韵是“必需要来看的一台演出，我们已经推荐给大家了。”</p>
 <p>责任编辑：瑛智</p>
 	
@@ -17,43 +17,43 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/xfzpul3051/djy/blob/master/gb/19/12/28/n11750706.md#1">神韵欧洲首场意大利贵族云集 编舞大师盛赞</a></li>
-<li><a href="https://github.com/xfzpul3051/djy/blob/master/gb/19/12/28/n11751114.md#1">牧师：神韵的艺术之美 可以拯救世界</a></li>
-<li><a href="https://github.com/xfzpul3051/djy/blob/master/gb/19/12/28/n11751376.md#1">圣荷西再爆满 观众感激“神韵带来希望”</a></li>
-<li><a href="https://github.com/xfzpul3051/djy/blob/master/gb/19/12/29/n11752198.md#1">神韵意大利爆满 银行家感悟应遵创世主安排</a></li>
-<li><a href="https://github.com/xfzpul3051/djy/blob/master/gb/19/12/29/n11753118.md#1">“改变生命的演出”神韵圣荷西周六两场爆满</a></li>
-<li><a href="https://github.com/xfzpul3051/djy/blob/master/gb/19/12/29/n11753135.md#1">神韵莅临伦敦 英国28场盛大演出在即</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/12/28/n11750706.md#1">神韵欧洲首场意大利贵族云集 编舞大师盛赞</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/12/28/n11751114.md#1">牧师：神韵的艺术之美 可以拯救世界</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/12/28/n11751376.md#1">圣荷西再爆满 观众感激“神韵带来希望”</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/12/29/n11752198.md#1">神韵意大利爆满 银行家感悟应遵创世主安排</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/12/29/n11753118.md#1">“改变生命的演出”神韵圣荷西周六两场爆满</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/12/29/n11753135.md#1">神韵莅临伦敦 英国28场盛大演出在即</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/2/n10015801.md#1" target="_blank">文武：中共篡政（一）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/10/n11782021.md#1" target="_blank">读《转法轮》澳洲西人找到生命意义</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/8/n10037691.md#1" target="_blank">天下收藏第一人张伯驹的悲喜人生（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/5/n11500416.md#1" target="_blank">滴水穿石 乌克蘭夫妇的坚韧诚心感化民众</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/nuzlxa3668/djy/blob/master/gb/21/9/10/n13225261.md#1">【未解之谜】轰动日本 甲府UFO事件</a></li>
-<li><a href="https://github.com/nuzlxa3668/djy/blob/master/gb/21/9/16/n13238162.md#1">美国男子自称遭外星人多次绑架和植入晶片</a></li>
-<li><a href="https://github.com/nuzlxa3668/djy/blob/master/gb/21/9/6/n13213473.md#1">古今两个中秋礼俗各异 古代不送月饼 月饼何时普及？</a></li>
-<li><a href="https://github.com/nuzlxa3668/djy/blob/master/gb/21/9/7/n13217118.md#1">千古奇书《西游记》</a></li>
-<li><a href="https://github.com/nuzlxa3668/djy/blob/master/gb/21/9/14/n13233994.md#1">【未解之谜】前世情未了 今生续前缘</a></li>
-<li><a href="https://github.com/nuzlxa3668/djy/blob/master/gb/21/9/18/n13243637.md#1">【十字路口】北京内乱加速 美英澳联盟成立主因</a></li>
-<li><a href="https://github.com/nuzlxa3668/djy/blob/master/gb/21/9/17/n13242494.md#1">【远见快评】习近平险遭袭击？官方放猛料泄底</a></li>
-<li><a href="https://github.com/nuzlxa3668/djy/blob/master/gb/21/9/17/n13242418.md#1">【拍案惊奇】华尔街大佬进京救火？许家印两出路</a></li>
-<li><a href="https://github.com/nuzlxa3668/djy/blob/master/gb/21/9/15/n13237097.md#1">【新闻看点】福建疫情仍严重 传许家印突进京</a></li>
-<li><a href="https://github.com/nuzlxa3668/djy/blob/master/gb/21/9/15/n13236838.md#1">王友群：中共意识形态总管王沪宁哪里去了？</a></li>
-<li><a href="https://github.com/nuzlxa3668/djy/blob/master/gb/21/9/16/n13239202.md#1">陆媒披露江苏警官策划“对领导人不轨”</a></li>
-<li><a href="https://github.com/nuzlxa3668/djy/blob/master/gb/21/9/15/n13236589.md#1">遭封杀20天后 赵薇首次现身家乡安徽芜湖</a></li>
-<li><a href="https://github.com/nuzlxa3668/djy/blob/master/gb/21/9/15/n13237195.md#1">赵丽颖重返节目帮洗碗 黄晓明惊呼遭调侃</a></li>
-<li><a href="https://github.com/nuzlxa3668/djy/blob/master/gb/21/9/16/n13239594.md#1">周星驰为何不再演戏？徐峥王晶析背后原因</a></li>
-<li><a href="https://github.com/nuzlxa3668/djy/blob/master/gb/21/9/15/n13236862.md#1">央视朱军性骚扰案宣判 弦子曝光庭审细节</a></li>
-<li><a href="https://github.com/nuzlxa3668/djy/blob/master/gb/21/9/16/n13238198.md#1">感慨龙劭华猝逝 “痛苦歌王”同受糖尿病之苦</a></li>
-<li><a href="https://github.com/nuzlxa3668/djy/blob/master/gb/21/9/16/n13237693.md#1">龙劭华猝逝 曾罹糖尿病12年 医吁警惕2征兆</a></li>
-<li><a href="https://github.com/nuzlxa3668/djy/blob/master/gb/21/9/17/n13240906.md#1">大陆女子藉网路摄影机 目击英国尼斯湖水怪</a></li>
-<li><a href="https://github.com/nuzlxa3668/djy/blob/master/gb/21/9/14/n13233592.md#1">早晨10个好习惯 让你的一天更有条理</a></li>
-<li><a href="https://github.com/nuzlxa3668/djy/blob/master/gb/21/9/16/n13238162.md#1">美国男子自称遭外星人多次绑架和植入晶片</a></li>
-<li><a href="https://github.com/nuzlxa3668/djy/blob/master/gb/21/9/17/n13240582.md#1">爱尔兰男子离职 最后薪资竟是30公斤重硬币</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752163.md#1">深圳前市长陈如桂落马 传有三大原因</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751276.md#1">好莱坞明星强尼戴普诽谤案胜诉 台主播发感言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xfzpul3051/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xfzpul3051/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/12/31/n11757836.htm">项目经理：神韵演出美妙绝伦 无可挑剔</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/12/31/n11757836.htm">项目经理：神韵演出美妙绝伦 无可挑剔</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xfzpul3051/djy/blob/master/gb/19/12/31/n11757836.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xfzpul3051/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xfzpul3051/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xfzpul3051/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xfzpul3051/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xfzpul3051/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xfzpul3051/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xfzpul3051/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xfzpul3051/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xfzpul3051/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xfzpul3051/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xfzpul3051/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xfzpul3051/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xfzpul3051/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xfzpul3051/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xfzpul3051/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xfzpul3051/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xfzpul3051/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xfzpul3051/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xfzpul3051/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xfzpul3051/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xfzpul3051/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xfzpul3051/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xfzpul3051/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xfzpul3051/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xfzpul3051/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xfzpul3051/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xfzpul3051/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xfzpul3051/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xfzpul3051/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xfzpul3051/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xfzpul3051/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xfzpul3051/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xfzpul3051/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xfzpul3051/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xfzpul3051/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xfzpul3051/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xfzpul3051/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xfzpul3051/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xfzpul3051/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xfzpul3051/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xfzpul3051/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xfzpul3051/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xfzpul3051/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xfzpul3051/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xfzpul3051/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xfzpul3051/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xfzpul3051/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xfzpul3051/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/19/12/31/n11757836.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
